2003-06-02  Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
      * WrapVTK.py : modifications to get correctly vtk source files to 
        compile

2003-06-11  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * vtk/vtkGdcmReader.[cxx/h]:
        - UpdateProgress method should now be effective
        - removed the limitation on having only images loaded (as opposed
          to volumes),
        - when building a stack of images/volume, a lesser number of
          gdcmHeader and gdcmFile instances should be used (hopefully
          accelerating things).
        - when building a stack of images/volumes, files which are not
          loadable (wrong path-filename, wrong permissions on existing file,
          or file not parsable by gdcm) are replaced with a black image
          in the stack (for the caller to notice the problem).

2003-06-03  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * vtk/vtkGdcmReader.cxx: hopefully corrected Z extent.

2003-06-02  Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
      * vtk/vtkGdcmReader[cxx|h] : makes correct code to remove conflicts 
        between standard library (std) and vtk library (problems are found
        under Windows... thanks Windows !)

2003-05-30  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * vtk/vtkGdcmReader[cxx|h] should now be volume aware (read ready for
        debug stage).
      * gdcmPython/demo/vtkGdcmReader.py: commented lines for volume test

2003-05-29  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * vtk/vtkGdcmReader[cxx|h] preparation addons for loading volumes.

2003-05-28  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * When compiling with distutils (see setup.py) the C++ compiler is
        called with different flags than the default ones (with automake).
        In order to fix all those warning, I compiled gdcm with the command
           make 'CXXFLAGS=-Wall -Wstrict-prototypes -D__STDC_LIMIT_MACROS'
        and went for warning fixes: