@@ -1,6 +1,8 @@
 2003-06-02  Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
       * WrapVTK.py : modifications to get correctly vtk source files to 
         compile
+      * vtk/vtkGdcmReader.cxx : modification for an already existing name
+        (FileName -> Filename)
 
 2003-06-11  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
       * vtk/vtkGdcmReader.[cxx/h]:
